SERVER-35361 Ensure collection is locked when deleting filemd5's PlanExecutor

(cherry picked from commit ab1f620bc37d174b43a11f40fb30c3b4b31584d1)